--- a/Spring-08-Spring-MVC-Model/src/main/resources/templates/car/car-info.html
+++ b/Spring-08-Spring-MVC-Model/src/main/resources/templates/car/car-info.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en", xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<h3 th:text="${allEmployees}"></h3>
+
+
+<h2 th:text="${make}"></h2>
+<h2 th:text="${year}"></h2>
+
+
+
 </body>
 </html>
