--- a/Spring-09-Spring-Thymeleaf/src/main/resources/templates/director/director-confirmation.html
+++ b/Spring-09-Spring-Thymeleaf/src/main/resources/templates/director/director-confirmation.html
@@ -27,6 +27,10 @@
     </div>
 </div>
 
+<div class="container">
+    <p th:text="${director}"></p>
+</div>
+
 
 
 <!-- Add Bootstrap JS and jQuery CDN (optional, for Bootstrap components) -->
